# DocvQA

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
assets/samples/: manifest.jsonl  sample_document.txt
configs/: sample_pipeline.yaml
docs/: configuration.md  datasets.md
scripts/: prepare_dataset.py
src/docvqa/: __init__.py
src/docvqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docvqa/cli/: main.py
src/docvqa/config/: loader.py  models.py
src/docvqa/data/: dataset.py
src/docvqa/evaluation/: __init__.py  loader.py  metrics.py
src/docvqa/extractors/: base.py  document_ai.py  factory.py  llm.py
src/docvqa/llm/: client.py
src/docvqa/pipeline/: prompts.py  run.py  schemas.py
src/docvqa/storage/: base.py  factory.py  firestore.py  local.py
src/docvqa/utils/: logging.py
tests/config/: test_loader.py
tests/data/: test_dataset.py
tests/evaluation/: test_metrics.py
tests/extractors/: test_llm.py
tests/pipeline/: test_runner.py
